--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <div class="row g-4">
       <div class="col-md-4" data-aos="zoom-in">
         <div class="card">
-          <img src="https://img99.pixhost.to/images/591/512700984_test.jpg" class="card-img-top" alt="Product 1">
+          <img src="https://files.catbox.moe/fbymrp.jpg" class="card-img-top" alt="Product 1">
           <div class="card-body">
-            <h5 class="card-title">Product 1</h5>
-            <p class="card-text">0</p>
+            <h5 class="card-title">Nokos Indo</h5>
+            <p class="card-text">5.000</p>
             <button class="btn btn-primary add-to-cart" data-name="Product 1" data-price="10">
               <i class="fas fa-cart-plus"></i> tambab keranjang
             </button>
@@ -47,10 +47,10 @@
       </div>
       <div class="col-md-4" data-aos="zoom-in">
         <div class="card">
-          <img src="https://img99.pixhost.to/images/591/512700984_test.jpg" class="card-img-top" alt="Product 2">
+          <img src="https://files.catbox.moe/fymr5t.jpg" class="card-img-top" alt="Product 2">
           <div class="card-body">
-            <h5 class="card-title">Product 2</h5>
-            <p class="card-text">0</p>
+            <h5 class="card-title">Panel Bot</h5>
+            <p class="card-text">1.000 - 8.000</p>
             <button class="btn btn-primary add-to-cart" data-name="Product 2" data-price="15">
               <i class="fas fa-cart-plus"></i> tambah keranjang
             </button>
@@ -131,6 +131,6 @@
           }
       });
   </script>
-  <script src="awan.js"></script>
+  <script src="dapz.js"></script>
 </body>
 </html>
