--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>simpel store</title>
+  <title>XdpzQStore</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">simpel storr</a>
+      <a class="navbar-brand" href="#">XdpzQ-Store</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
   <span class="navbar-toggler-icon"></span>
 </button>
@@ -28,12 +28,12 @@
     </div>
   </nav>
   <div class="bg-light text-center py-5" data-aos="fade-up">
-    <h1>welcome to simpel store</h1>
-    <p class="lead">silakan pilih produk dibawah ini!</p>
+    <h1>welcome to XdpzQ Store</h1>
+    <p class="lead">silakan geser produk untuk melihat produk lainnya</p>
   </div>
   <div class="container my-5" id="products">
     <h2 class="text-center mb-4" data-aos="fade-down">ALL PRODUK</h2>
-    <div class="row g-4">
+    <div class="row flex-nowrap overflow-auto g-4">
       <div class="col-md-4" data-aos="zoom-in">
         <div class="card">
           <img src="https://files.catbox.moe/fbymrp.jpg" class="card-img-top" alt="Product 1">
