--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="row flex-nowrap overflow-auto g-4">
       <div class="col-md-4" data-aos="zoom-in">
         <div class="card">
-          <img src="https://files.catbox.moe/fbymrp.jpg" class="card-img-top" alt="Nokos 1">
+          <img src="https://files.catbox.moe/fbymrp.jpg" class="card-img-top" alt="Product 1">
           <div class="card-body">
             <h5 class="card-title">Nokos Indo</h5>
             <p class="card-text">5.000</p>
