--- a/index.html
+++ b/index.html
@@ -125,6 +125,133 @@
   const themeToggle = document.getElementById('theme-toggle');
   themeToggle.addEventListener('click', () => {
     document.body.classList.toggle('dark-mode');
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>XdpzQStore</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">XdpzQ-Store</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+  <span class="navbar-toggler-icon"></span>
+</button>
+<button id="theme-toggle" class="btn btn-outline-light ms-3">🌙</button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#products">Products</a></li>
+          <li class="nav-item"><a class="nav-link" href="#cart">Cart</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="bg-light text-center py-5" data-aos="fade-up">
+    <h1>welcome to XdpzQ Store</h1>
+    <p class="lead">silakan geser produk untuk melihat produk lainnya</p>
+  </div>
+  <div class="container my-5" id="products">
+    <h2 class="text-center mb-4" data-aos="fade-down">ALL PRODUK</h2>
+    <div class="row flex-nowrap overflow-auto g-4">
+      <div class="col-md-4" data-aos="zoom-in">
+        <div class="card">
+          <img src="https://files.catbox.moe/fbymrp.jpg" class="card-img-top" alt="Product 1">
+          <div class="card-body">
+            <h5 class="card-title">Nokos Indo</h5>
+            <p class="card-text">5</p>
+            <button class="btn btn-primary add-to-cart" data-name="Product 1" data-price="5">
+              <i class="fas fa-cart-plus"></i> tambab keranjang
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4" data-aos="zoom-in">
+        <div class="card">
+          <img src="https://files.catbox.moe/fymr5t.jpg" class="card-img-top" alt="Product 2">
+          <div class="card-body">
+            <h5 class="card-title">Panel Bot</h5>
+            <p class="card-text">1.000 - 8.000</p>
+            <button class="btn btn-primary add-to-cart" data-name="Product 2" data-price="1">
+              <i class="fas fa-cart-plus"></i> tambah keranjang
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4" data-aos="zoom-in">
+        <div class="card">
+          <img src="https://files.catbox.moe/fbymrp.jpg" class="card-img-top" alt="Product 3">
+          <div class="card-body">
+            <h5 class="card-title">Product 3</h5>
+            <p class="card-text">0</p>
+            <button class="btn btn-primary add-to-cart" data-name="Product 3" data-price="20">
+              <i class="fas fa-cart-plus"></i> tambah keranjang
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4" data-aos="zoom-in">
+        <div class="card">
+          <img src="https://files.catbox.moe/fbymrp.jpg" class="card-img-top" alt="Product 4">
+          <div class="card-body">
+            <h5 class="card-title">Product 4</h5>
+            <p class="card-text">0</p>
+            <button class="btn btn-primary add-to-cart" data-name="Product 4" data-price="25">
+              <i class="fas fa-cart-plus"></i> tambah keranjang
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4" data-aos="zoom-in">
+        <div class="card">
+          <img src="https://files.catbox.moe/fbymrp.jpg" class="card-img-top" alt="Product 5">
+          <div class="card-body">
+            <h5 class="card-title">Product 5</h5>
+            <p class="card-text">0</p>
+            <button class="btn btn-primary add-to-cart" data-name="Product 5" data-price="30">
+              <i class="fas fa-cart-plus"></i>tambah keranjang
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container my-5" id="cart">
+    <h2 class="text-center mb-4" data-aos="fade-right">harga</h2>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>produk</th>
+          <th>harga</th>
+          <th>kualitas</th>
+          <th>total</th>
+        </tr>
+      </thead>
+      <tbody id="cart-items">
+      </tbody>
+    </table>
+    <div class="text-end">
+      <strong>Total: $<span id="cart-total">0.00</span></strong>
+    </div>
+    <div class="text-end mt-3">
+      <button class="btn btn-success" id="checkout-button"><i class="fas fa-credit-card"></i> Checkout</button>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+<script>
+  const themeToggle = document.getElementById('theme-toggle');
+  themeToggle.addEventListener('click', () => {
+    document.body.classList.toggle('dark-mode');
     themeToggle.textContent = document.body.classList.contains('dark-mode') ? '☀️' : '🌙';
   });
 
